--- a/Phone/src/phone/view/Home.fxml
+++ b/Phone/src/phone/view/Home.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="349.0" prefWidth="550.0" styleClass="anotherBackground" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="phone.view.Home">
    <children>
       <GridPane prefHeight="60.0" prefWidth="550.0" styleClass="backgroung">
@@ -49,7 +48,7 @@
                   <Font name="Corbel Light" size="40.0" />
                </font>
             </Text>
-            <Label fx:id="balance" prefHeight="32.0" prefWidth="160.0" textAlignment="RIGHT">
+            <Label fx:id="balance" alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="160.0" text="4545" textAlignment="RIGHT">
                <font>
                   <Font name="Century" size="25.0" />
                </font>
