--- a/Phone/src/phone/callStyle.css
+++ b/Phone/src/phone/callStyle.css
@@ -15,3 +15,7 @@
 	-fx-background-color: #88CA5E;
 	-fx-background-radius: 25px;
 }
+.end{
+	-fx-background-color: #e50b03;
+	-fx-background-radius:30px;
+}
