--- a/Phone/src/phone/view/Number.fxml
+++ b/Phone/src/phone/view/Number.fxml
@@ -10,10 +10,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="163.0" prefWidth="249.0" stylesheets="@../topupStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="phone.view.Number">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="219.0" prefWidth="249.0" stylesheets="@../topupStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="phone.view.Number">
    <children>
-      <GridPane prefHeight="165.0" prefWidth="249.0">
+      <GridPane prefHeight="234.0" prefWidth="249.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -21,6 +20,7 @@
         <rowConstraints>
           <RowConstraints maxHeight="79.0" minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="125.0" minHeight="10.0" prefHeight="76.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="125.0" minHeight="10.0" prefHeight="76.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="76.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -29,7 +29,7 @@
                   <Font name="Century Gothic" size="25.0" />
                </font>
             </Label>
-            <TextField fx:id="number" alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="229.0" promptText="Enter Your Number Here" styleClass="textfield" GridPane.columnSpan="2" GridPane.rowIndex="1">
+            <TextField fx:id="number" alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="230.0" promptText="Enter Your Number Here" styleClass="textfield" GridPane.columnSpan="2" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -37,16 +37,24 @@
                   <Font name="Comic Sans MS" size="15.0" />
                </font>
             </TextField>
-            <Button mnemonicParsing="false" onAction="#confirm" prefHeight="35.0" prefWidth="70.0" styleClass="numberBtn" text="Confirm" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Button mnemonicParsing="false" onAction="#confirm" prefHeight="35.0" prefWidth="70.0" styleClass="numberBtn" text="Confirm" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="30.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="cancle" mnemonicParsing="false" prefHeight="35.0" prefWidth="70.0" styleClass="numberBtn" text="cancle" GridPane.rowIndex="2">
+            <Button fx:id="cancle" mnemonicParsing="false" prefHeight="35.0" prefWidth="70.0" styleClass="numberBtn" text="cancle" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="60.0" />
                </GridPane.margin>
             </Button>
+            <TextField fx:id="amount" alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="230.0" promptText="Amount" styleClass="textfield" GridPane.columnSpan="2" GridPane.rowIndex="2">
+               <font>
+                  <Font name="Comic Sans MS" size="15.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+            </TextField>
          </children>
       </GridPane>
    </children>
