--- a/Phone/src/phone/view/Call.fxml
+++ b/Phone/src/phone/view/Call.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.text.Font?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="@../callStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="phone.view.Call">
    <children>
       <GridPane prefHeight="90.0" prefWidth="500.0" styleClass="back">
@@ -180,6 +179,17 @@
                </GridPane.margin>
                <graphic>
                   <SVGPath content="M4 5h3v10h-3v-10zM16 5v10l-9-5 9-5z" />
+               </graphic>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#history" prefHeight="45.0" prefWidth="100.0" styleClass="numBtn" text="History" GridPane.rowIndex="5">
+               <GridPane.margin>
+                  <Insets left="40.0" />
+               </GridPane.margin>
+               <font>
+                  <Font name="Candara" size="15.0" />
+               </font>
+               <graphic>
+                  <SVGPath content="M12.5 1.25c4.832 0 8.75 3.918 8.75 8.75s-3.918 8.75-8.75 8.75v-1.875c1.836 0 3.563-0.715 4.861-2.014s2.014-3.025 2.014-4.861c0-1.836-0.715-3.563-2.014-4.861s-3.025-2.014-4.861-2.014c-1.836 0-3.563 0.715-4.861 2.014-0.999 0.999-1.652 2.251-1.901 3.611h3.637l-4.375 5-4.375-5h3.214c0.607-4.24 4.253-7.5 8.661-7.5zM16.25 8.75v2.5h-5v-6.25h2.5v3.75z" />
                </graphic>
             </Button>
          </children>
